# wcc-workshop

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_science.yml
src/wcc_workshop/: __init__.py  __main__.py  settings.py
src/wcc_workshop/pipelines/data_science/: pipeline.py
