[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "wcc_workshop"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
wcc-workshop = "wcc_workshop.__main__:main"

[tool.kedro]
package_name = "wcc_workshop"
project_name = "wcc-workshop"
kedro_init_version = "0.19.9"
tools = "['Data Structure', 'Kedro Viz']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "wcc_workshop.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "129c180a88534ea9933d7cec5abdac37"
